ShoppingCart-IaC/productapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productapi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productapi
  template:
    metadata:
      labels:
        app: productapi
    spec:
      containers:
      - name: productapi-container
        image: pradeepl/productapi:1.0.1
        ports:
        - containerPort: 8080
        resources:
          limits:
            memory: "512Mi"
            cpu: "1" # 1 CPU core
          requests:
            memory: "512Mi"
            cpu: "0.5" # 500 millicores
