ShoppingCart-IaC/productapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: productapi-service
spec:
  selector:
    app: productapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
