ShoppingCart-IaC/service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: shopping-cart-web
  namespace: shopping-cart
spec:
  selector:
    app: shopping-cart-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
