ShoppingCart-IaC/sqlserver-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlserver-service
spec:
  selector:
    app: sqlserver
  ports:
    - protocol: TCP
      port: 1433
      targetPort: 1433
