ShoppingCart-IaC/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shopping-cart-ingress
  namespace: shopping-cart
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: myshoppingcartdomain.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: shopping-cart-api
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: shopping-cart-web
            port:
              number: 80
